# owl_midi

./: .pre-commit-config.yaml  Cargo.toml  build.rs  constant.MIDI_SYSEX_OWL_DEVICE.html  constant.SYSEX_CONFIGURATION_BOOTLOADER_LOCK.html  constant.SYSEX_CONFIGURATION_CODEC_INPUT_GAIN.html  constant.SYSEX_CONFIGURATION_CODEC_OUTPUT_GAIN.html  crates.js  search-index.js  settings.html  source-files.js
owl_midi/: all.html  constant.MIDI_OMNI_CHANNEL.html  constant.MIDI_SYSEX_MANUFACTURER.html  constant.MIDI_SYSEX_OMNI_DEVICE.html  constant.MIDI_SYSEX_OWL_DEVICE.html  constant.MIDI_SYSEX_VERSION.html  constant.SYSEX_CONFIGURATIONS.html  constant.SYSEX_CONFIGURATION_AUDIO_BITDEPTH.html  constant.SYSEX_CONFIGURATION_AUDIO_BLOCKSIZE.html  constant.SYSEX_CONFIGURATION_AUDIO_DATAFORMAT.html  constant.SYSEX_CONFIGURATION_AUDIO_RATE.html  constant.SYSEX_CONFIGURATION_BOOTLOADER_LOCK.html  constant.SYSEX_CONFIGURATION_BUS_ENABLE.html  constant.SYSEX_CONFIGURATION_BUS_FORWARD_MIDI.html  constant.SYSEX_CONFIGURATION_CODEC_BYPASS.html  constant.SYSEX_CONFIGURATION_CODEC_HIGHPASS.html  constant.SYSEX_CONFIGURATION_CODEC_INPUT_GAIN.html  constant.SYSEX_CONFIGURATION_CODEC_OUTPUT_GAIN.html  constant.SYSEX_CONFIGURATION_CODEC_SWAP.html  constant.SYSEX_CONFIGURATION_EXPRESSION_PEDAL.html  constant.SYSEX_CONFIGURATION_INPUT_OFFSET.html  constant.SYSEX_CONFIGURATION_INPUT_SCALAR.html  constant.SYSEX_CONFIGURATION_MIDI_INPUT_CHANNEL.html  constant.SYSEX_CONFIGURATION_MIDI_OUTPUT_CHANNEL.html  constant.SYSEX_CONFIGURATION_OUTPUT_OFFSET.html  constant.SYSEX_CONFIGURATION_OUTPUT_SCALAR.html  (+14 more)
(+24 files in other folders)
