[package]
name = "owl_midi"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"
license-file = "LICENSE"
description = "Bindings for OWL firmware FFI"
repository = "https://github.com/antisvin/owl_midi"
keywords = ["ffi", "midi"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.59.2"
